fix: remove wrong z-index

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -6,7 +6,6 @@
   opacity: 0.65;
   position: relative;
   margin-top: auto;
-  z-index: -1;
 }
 
 .footer-inner {
